--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
             <p class="text-center pt-4">I am a curious self-driven designer with a strong passion for design and development of engaging user experiences. I thrive in creative ideas and engaging solutions across brand identity, print, packaging, and digital media. As a designer, I know that learning never stops and this is something that I embrace wholeheartedly. I’m always seeking new challenges and experiences. I love to come up with unique solutions to creative problems regardless of what medium I’m working in. My passion for helping others comes from the guidance my mentors and community have given me. Collaborating with others has allowed me opportunity to continue to grow as a designer.</p>
             <p class="text-center mb-5">When I’m not designing, I’m either listening to audible, hiking, working my way to learn how to cook family recipes and indulging my love for seeing new places. Please contact me if you'd like to get coffee and chat about your next project or maybe just your favorite typeface! Specialties: logo design, web design, packaging, branding and identity, typography, UX/UI design, CSS, HTML, and Creative Suite</p>
 
-            <h1 id="speakers" class="display-4 text-center my-5 text-muted">My Education</h1>
+<hr>
+            <h1 id="education" class="display-4 text-center my-5 text-muted">My Education</h1>
 
             <div class="row">
                     <div class="col-lg">
@@ -150,20 +151,30 @@
 			    </div>
 				</div>
 			</div><!-- /work -->
-     
+      <!-- block quote -->
+<br>
+<br>
+ <blockquote class="blockquote text-center">
+  <h4 class="mb-0">You gain strength, courage and confidence by every experience in which you stop to look fear in the face</h4>
+  <footer class="blockquote-footer">Someone amazing <cite title="Source Title">Eleanor Roosevelt</cite></footer>
+</blockquote>
+<!-- block quote -->
+<br>
    	  <!-- signup form -->
 			<hr>
 			<div class="row py-4 text-muted">
 				<div class="col-md col-xl-5">
-					<p><strong>Contact Me</strong></p>
+					<h3><strong>Contact Me</strong></h3>
 					<p>Please contact me if you'd like to get coffee and talk about your next project or maybe just your favorite typeface! I’m also open to conversations about your pet.</p>
 				</div>
 			  <div class="col-md col-xl-5 ml-auto">
-			  	<p><strong>What are we working on...</strong></p>
-			    <div class="input-group">
-			      <input type="text" class="form-control" placeholder="Email">
-			      <span class="input-group-btn">
-			        <button class="btn btn-primary" type="button">Connect</button>
+          <p><strong>I would love to hear from you...</strong></p>
+          <div class="col-md-6 left zindex">
+						<div class="section-hdr color">
+							<div><span class="bold">Phone:</span> (714) 393-6074</div>
+							<p><span class="bold">Email:</span> <a href="mailto:wportillo@my365.bellevue.edu" title="Wendy Portillo">wportillo@my365.bellevue.edu</a></p>
+						</div>
+					</div>
 			      </span>
 			    </div>
 			  </div>
