updated new projects

--- a/index.html
+++ b/index.html
@@ -149,7 +149,45 @@
                     <p class="card-text"><a href="https://github.com/dearwendy714/web-330"><h4>Repository</a></p>
                     </div>
 			    </div>
-				</div>
+        </div>
+        <div class="col-md-6 col-lg-4">
+			    <div class="card mb-3">
+                        <img class="mb-4 img-fluid rounded" src="images/git.png" height="100" width="100" alt="Web 330 Repository">
+			      <div class="card-body">
+			        <h4 class="card-title">HTML Assassins Group Project</h4>
+                    <p class="card-text"><a href="https://github.com/dearwendy714/web-330/tree/master/Group%20HTML-Assassins"><h4>Repository</a></p>
+                    </div>
+			    </div>
+        </div>
+        <div class="col-md-6 col-lg-4">
+				  <div class="card mb-3">
+                        <img class="mb-4 img-fluid rounded" src="images/programming.png" height="100" width="100" alt="Personal Portfolio">
+			      <div class="card-body">
+			        <h4 class="card-title">HTML Assassins Group Project</h4>
+			        <p class="card-text"><a href="https://dearwendy714.github.io/web-330/Group%20HTML-Assassins/quiz-view.html
+                "><h4>JavaScript Quiz</a></h4>
+			      </div>
+			    </div>
+        </div>
+        <div class="col-md-6 col-lg-4">
+			    <div class="card mb-3">
+                        <img class="mb-4 img-fluid rounded" src="images/git.png" height="100" width="100" alt="Web 330 Repository">
+			      <div class="card-body">
+			        <h4 class="card-title">Employees Management System (EMS) Project</h4>
+                    <p class="card-text"><a href="https://github.com/dearwendy714/web-340/tree/master/ems"><h4>Repository</a></p>
+                    </div>
+			    </div>
+        </div>
+        <div class="col-md-6 col-lg-4">
+			    <div class="card mb-3">
+                        <img class="mb-4 img-fluid rounded" src="images/git.png" height="100" width="100" alt="Web 330 Repository">
+			      <div class="card-body">
+			        <h4 class="card-title">Employees Management System (EMS) Heroku</h4>
+                    <p class="card-text"><a href="https://obscure-dusk-88127.herokuapp.com/
+                      "><h4>Heroku</a></p>
+                    </div>
+			    </div>
+        </div>
 			</div><!-- /work -->
       <!-- block quote -->
 <br>
