--- a/Design_process.html
+++ b/Design_process.html
@@ -14,7 +14,7 @@
 		<p>Introduce who I am as a designer. Promote myself as a businesses/artist, provide information, connect people, and store content. </p>
 	<p>(2) Who is the Audience?</p>
 		<p>Professional artists/designers.</p>
-	<p>(3) What message needs to be ccommunicated?</p>
+	<p>(3) What message needs to be communicated?</p>
 		<p>Showcases my work as a designer showing my capabilities and vision to hire me.</p>
 	<p>(4) What is the competition and marketplace?</p>
 		<p>Other graphic designers.</p>
