--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
             <a class="nav-item nav-link" href="#home">Home <span class="sr-only">(current)</span></a>
             <a class="nav-item nav-link" href="#education">Education</a>
             <a class="nav-item nav-link" href="#work">Work</a>
+            <a class="nav-item nav-link" href="#diagrams"> NoSQL- data-diagrams</a>
+
           </div>
         </div>
       </div>
@@ -188,7 +190,37 @@
                     </div>
 			    </div>
         </div>
-			</div><!-- /work -->
+        <div class="col-md-6 col-lg-4">
+			    <div class="card mb-3">
+                        <img class="mb-4 img-fluid rounded" src="images/git.png" height="100" width="100" alt="Web 330 Repository">
+			      <div class="card-body">
+			        <h4 class="card-title">Web-335</h4>
+                    <p class="card-text"><a href="https://dearwendy714.github.io/web-335/"
+                      ><h4>Introduction to NoSQL</a></p>
+                    </div>
+			    </div>
+        </div>
+      </div><!-- /work -->
+      
+
+    <div class="container pt-4">
+
+      <!-- diagram -->
+      <div id="diagrams" class="row"></div>
+<hr>
+            <h1 id="diagrams" class="display-4 text-center my-5 text-muted">NoSQL-Data-Diagram</h1>
+
+            <div class="row">
+                    <div class="col-lg">
+                      <img class="mb-4 img-fluid rounded" src="images/flow-chart.png" height="100" width="100" alt="graduation">
+
+                      <h3 class="mb-4">Web-335</h3>
+                      <p class="card-text"><a href="Portillo-diagrams.html"
+                        ><h4>Introduction to NoSQL</a></p>
+                    </div>
+                  </div><!-- /diagram -->
+      <hr>
+
       <!-- block quote -->
 <br>
 <br>
