--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
             <a class="nav-item nav-link" href="#education">Education</a>
             <a class="nav-item nav-link" href="#work">Work</a>
             <a class="nav-item nav-link" href="#diagrams"> NoSQL- data-diagrams</a>
+            <a class="nav-item nav-link" href="#diagrams"> Presentations</a>
+
 
           </div>
         </div>
@@ -218,8 +220,16 @@
                       <p class="card-text"><a href="Portillo-diagrams.html"
                         ><h4>Introduction to NoSQL</a></p>
                     </div>
+                    <div class="col-lg">
+                      <img class="mb-4 img-fluid rounded" src="images/api.png" height="100" width="100" alt="graduation">
+
+                        <h3 class="mb-4">Web-420</h3>
+                        <p class="card-text"><a href="presentation.html"><h4>RESTFUL-API-Presentations</a></p>
+                                          </div>
+                    
                   </div><!-- /diagram -->
       <hr>
+      
 
       <!-- block quote -->
 <br>
