--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                       <img class="mb-4 img-fluid rounded" src="images/api.png" height="100" width="100" alt="graduation">
 
                         <h3 class="mb-4">Web-420</h3>
-                        <p class="card-text"><a href="presentation.html"><h4>RESTFUL-API-Presentations</a></p>
+                        <p class="card-text"><a href="Portillo-rest.html"><h4>RESTFUL-API-Presentations</a></p>
                                           </div>
                     
                   </div><!-- /diagram -->
