--- a/Portillo-rest.html
+++ b/Portillo-rest.html
@@ -76,6 +76,12 @@
                         <h3 class="mb-4">Presentation 2.2</h3>
                         <p class="card-text"><a href="presentation/Presentation_2.2-RESTfulAPIs.m4v"><h4>What is RESTful APIs?</a></p>
                       </div>
+                      <div class="col-lg">
+                        <img class="mb-4 img-fluid rounded" src="images/http.png" height="100" width="100" alt="RESTFUL-API">
+  
+                        <h3 class="mb-4">Presentation 3.3</h3>
+                        <p class="card-text"><a href="presentation/Presentation_3.3-SOAP.m4v"><h4>What is SOAP?</a></p>
+                      </div>
                       
                     </div><!-- /presentation -->
         <hr>
