--- a/Portillo-rest.html
+++ b/Portillo-rest.html
@@ -128,7 +128,20 @@
             <div class="card-body">
               <h4 class="card-title">Presentation 4.2</h4>
               <p class="card-text"><a href="presentation/Presentation_6.2-HypermediaDesign.m4v">
-                  <h4>What is -Hypermedia Design</h4>
+                  <h4>What is Hypermedia Design</h4>
+                </a></p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-6 col-lg-4">
+          <div class="card mb-3">
+            <img class="mb-4 img-fluid rounded" src="images/http.png" height="100" width="100"
+              alt="Presentation-Service Oriented Architecture & Enterprise Service Bus">
+            <div class="card-body">
+              <h4 class="card-title">Presentation 7.2</h4>
+              <p class="card-text"><a href="presentation/Presentation_7.2-SOA_ESB.m4v">
+                  <h4>What is Service Oriented Architecture & Enterprise Service Bus</h4>
                 </a></p>
             </div>
           </div>
