--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <!-- navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
     <div class="container">
-      <a class="navbar-brand order-1 mr-0" href="http://wendydesign.x10host.com/" target="_blank">All Things Web</a>
+      <a class="navbar-brand order-1 mr-0" href="http://dearwendydev.netifly.com/" target="_blank">All Things Web</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
         aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
