update Week 2 presentation

--- a/Portillo-tech-value-stream.html
+++ b/Portillo-tech-value-stream.html
@@ -80,12 +80,27 @@
                             </a>
                     </div>
                 </div>
-                <script type="text/javascript" src="/resources/js/script.js"></script>
-                <!-- footer -->
-
             </div>
-            <div class="col-md text-md-right">
-                <small>&copy; 2019 Wendy Portillo &amp; Web Design</small>
+            <div class="col-md-6 col-lg-4">
+                <div class="card mb-3">
+                    <img class="mb-4 img-fluid rounded" src="images/http.png" height="100" width="100"
+                        alt="Presentation-Two-Pizza Team Rule">
+                    <div class="card-body">
+                        <h4 class="card-title">Presentation 2.2</h4>
+                        <p class="card-text"><a href="presentation/Portillo_Presentation2.2-Two-PizzaTeamRule.m4v">
+                                <h4>Two Pizza Team Rule </h4>
+                            </a></p>
+                    </div>
+                </div>
+            </div>
+
+            <script type="text/javascript" src="/resources/js/script.js"></script>
+            <!-- footer -->
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6 offset-md-3"><small>&copy; 2019 Wendy Portillo &amp; Web Design</small></div>
+
+                </div>
             </div>
         </div><!-- /footer -->
 
