updated changes Week 3 Presentation

--- a/Portillo-tech-value-stream.html
+++ b/Portillo-tech-value-stream.html
@@ -26,7 +26,7 @@
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
         <div class="container">
-            <a class="navbar-brand order-1 mr-0" href="http://wendydesign.x10host.com/" target="_blank">All Things
+            <a class="navbar-brand order-1 mr-0" href="https://dearwendydev.netlify.com" target="_blank">All Things
                 Web</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -89,6 +89,18 @@
                         <h4 class="card-title">Presentation 2.2</h4>
                         <p class="card-text"><a href="presentation/Portillo_Presentation2.2-Two-PizzaTeamRule.m4v">
                                 <h4>Two Pizza Team Rule </h4>
+                            </a></p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-4">
+                <div class="card mb-3">
+                    <img class="mb-4 img-fluid rounded" src="images/http.png" height="100" width="100"
+                        alt="Presentation-DevOps Automated Testing">
+                    <div class="card-body">
+                        <h4 class="card-title">Presentation 3.2</h4>
+                        <p class="card-text"><a href="presentation/Presentation-3.2Testing_DevOpsAutomatedTesting.m4v">
+                                <h4>DevOps Automated Testing </h4>
                             </a></p>
                     </div>
                 </div>
