--- a/Portillo-tech-value-stream.html
+++ b/Portillo-tech-value-stream.html
@@ -105,6 +105,18 @@
                     </div>
                 </div>
             </div>
+            <div class="col-md-6 col-lg-4">
+                <div class="card mb-3">
+                    <img class="mb-4 img-fluid rounded" src="images/http.png" height="100" width="100"
+                        alt="Continuous Integration">
+                    <div class="card-body">
+                        <h4 class="card-title">Presentation 4.2</h4>
+                        <p class="card-text"><a href="presentation/Continuous Integration.m4v">
+                                <h4>Continuous Integration</h4>
+                            </a></p>
+                    </div>
+                </div>
+            </div>
 
             <script type="text/javascript" src="/resources/js/script.js"></script>
             <!-- footer -->
