Update week 7 presentation

--- a/Portillo-tech-value-stream.html
+++ b/Portillo-tech-value-stream.html
@@ -141,6 +141,18 @@
                     </div>
                 </div>
             </div>
+            <div class="col-md-6 col-lg-4">
+                <div class="card mb-3">
+                    <img class="mb-4 img-fluid rounded" src="images/http.png" height="100" width="100"
+                        alt="Technology vs. Business">
+                    <div class="card-body">
+                        <h4 class="card-title">Presentation 7.2</h4>
+                        <p class="card-text"><a href="presentation/Presentation7.2-Technologyvs.Business.m4v">
+                                <h4>Technology vs. Business</h4>
+                            </a></p>
+                    </div>
+                </div>
+            </div>
 
             <script type="text/javascript" src="/resources/js/script.js"></script>
             <!-- footer -->
