update nodebucket and Bob Computer Repair 450 work

--- a/index.html
+++ b/index.html
@@ -247,12 +247,26 @@
       </div>
       <div class="col-md-6 col-lg-4">
         <div class="card mb-3">
-          <img class="mb-4 img-fluid rounded" src="images/git.png" height="100" width="100"
+          <img class="mb-4 img-fluid rounded" src="images/programming.png" height="100" width="100" alt="Web 330 Repository">
+          <div class="card-body">
+            <h4 class="card-title">Web-450 Nodebucket</h4>
+            <p class="card-text"><a href="https://portillo-nodebucket.herokuapp.com/#/">
+                <h4>Heroku
+              </a>
+              <p class="card-text"><a href="https://github.com/dearwendy714/nodebucket">
+                <h4>Repository</h4></a></p>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6 col-lg-4">
+        <div class="card mb-3">
+          <img class="mb-4 img-fluid rounded" src="images/programming.png" height="100" width="100"
             alt="Bob's Computer Repair Website">
           <div class="card-body">
-            <h4 class="card-title">Bob's Computer Repair</h4>
-            <p class="card-text"><a href="https://github.com/dearwendy714/web-425/tree/master/Week-9/Portillo-bobs-computer-repair
-                ">
+            <h4 class="card-title">Web-450 Bob's Computer Repair</h4>
+            <p class="card-text"><a href="https://group-project-bcrs.herokuapp.com/#/">
+              <h4>Heroku</h4></a></p>
+            <p class="card-text"><a href="https://github.com/sitepioneers/bobs-computer-repair-shop">
                 <h4>Repository
               </a></h4>
             </div>
